# gbcli

./: CMakeLists.txt  README.md
c_impl/src/: bus.c  cpu.c  instructions.c  main  main.c
c_impl/src/include/: bus.h  cpu.h  instruction_set.h  instructions.h
c_impl/test/: build  test_addr_mode.h  test_suite  test_suite.c
src/: cpu.cpp  main.cpp
src/include/: cpu.hpp
test/: cpu_test.cpp  hello_test.cpp
